# xrcap

./: .gitignore  CMakeLists.txt  README.md  UsedSoftwareLicenses.txt
apps/: README.md
apps/capture_client/: CMakeLists.txt
apps/capture_client/include/: CaptureDecoder.hpp  DejitterQueue.hpp  FileFormat.hpp  FileReader.hpp  FileWriter.hpp  NetClient.hpp  capture_client.h
apps/capture_client/src/: CaptureClient.cpp  CaptureDecoder.cpp  DejitterQueue.cpp  FileReader.cpp  FileWriter.cpp
apps/capture_client/tests/: Test.cpp
apps/capture_server/src/: CaptureServer.hpp  Main.cpp  ServerSettings.cpp
apps/rendezvous_server/: CMakeLists.txt
apps/viewer/: CMakeLists.txt
apps/viewer/src/: Gltf2Writer.cpp  Gltf2Writer.hpp  GltfWriter.cpp  ViewerSettings.cpp  ViewerSettings.hpp  ViewerWindow.cpp  ViewerWindow.hpp
apriltag/: CMakeLists.txt  LICENSE.md  VERSION.md
apriltag/include/common/: image_u8x3.h  time_util.h
apriltag/src/: apriltag_quad_thresh.c
apriltag/src/common/: PthreadWin32Adapter.cpp  image_u8x3.c
apriltag/tests/: test.cpp
capture/: CMakeLists.txt
capture/include/: BatchProcessor.hpp  CaptureDevice.hpp  K4aTools.hpp  RgbdImage.hpp  TimeConverter.hpp
capture/src/: CaptureDevice.cpp  CaptureSettings.cpp  K4aTools.cpp  RgbdImage.cpp  image_cull_cpu.txt
capture_client/: XrcapFileFormat.md
capture_client/include/: CaptureClient.hpp  FileReader.hpp  FrameInfo.hpp
capture_client/src/: CaptureClient.cpp  DejitterQueue.cpp  FileFormat.cpp  FileReader.cpp  NetClient.cpp  capture_client.cpp
capture_protocol/include/: CaptureProtocol.hpp
capture_server/: CMakeLists.txt
capture_server/src/: AppIcon.inc  CaptureFrontend.cpp  CaptureFrontend.hpp  CaptureServer.cpp  Main.cpp  ServerSettings.hpp
codecs/: README.md
codecs/mfx/: CMakeLists.txt
codecs/mfx_codecs/include/: MfxDirect3D9.hpp  MfxTools.hpp
codecs/mfx_codecs/src/: MfxDirect3D9.cpp  MfxVideoEncoder.cpp
codecs/nvcuvid/src/: NvDecoder.cpp  NvEncoder.cpp
codecs/nvcuvid_codecs/include/: NvVideoCodec.hpp
codecs/zdepth/: CMakeLists.txt  README.md
codecs/zdepth/include/: zdepth_lossy.hpp
codecs/zdepth/src/: zdepth_lossless.cpp  zdepth_lossy.cpp
core/include/: core_logging.hpp  core_string.hpp  core_win32.hpp
core/src/: core.cpp  core_serializer.cpp  core_win32.cpp
depth_mesh/include/: CameraExtrinsics.hpp  ColorNormalization.hpp  DepthCalibration.hpp  DepthMesh.hpp
depth_mesh/src/: CameraExtrinsics.cpp
ffmpeg/: fixme.txt
ffmpeg/win32/: README.txt
ffmpeg/win32/examples/: Makefile
ffmpeg/win32/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  swresample.lib
glad/: CMakeLists.txt
glad/include/: GLCore.hpp  ImageTilingRender.hpp  VideoMeshRender.hpp  glad.h
glad/src/: GLCore.cpp  VideoMeshRender.cpp  glad.c
libraries/: README.md
libraries/capture/: CMakeLists.txt
libraries/capture/include/: BatchProcessor.hpp  CaptureManager.hpp  CaptureSettings.hpp  RuntimeConfiguration.hpp
libraries/capture/src/: BatchProcessor.cpp  CaptureManager.cpp  RuntimeConfiguration.cpp  TimeConverter.cpp
libraries/capture/test/: capture_test.cpp
libraries/capture_protocol/: CMakeLists.txt
libraries/capture_protocol/src/: CaptureProtocol.cpp
libraries/core/: CMakeLists.txt
libraries/core/include/: core.hpp  core_bit_math.hpp  core_counter_math.hpp  core_mmap.hpp  core_serializer.hpp  core_video.hpp
libraries/core/src/: core_logging.cpp  core_mmap.cpp  core_string.cpp  core_video.cpp  core_win32.cpp
libraries/core/tests/: core_test.cpp
libraries/depth_mesh/: CMakeLists.txt
libraries/depth_mesh/src/: ColorNormalization.cpp  DepthMesh.cpp
libraries/depth_mesh/tests/: depth_mesh_tests.cpp
libraries/depthengine/: CMakeLists.txt
libraries/glad/include/: TrackballCamera.hpp
libraries/glad/src/: ImageTilingRender.cpp  TrackballCamera.cpp
libraries/tonk/: README.md
libraries/tonk/include/: TonkCppSDK.hpp  tonk.h
libraries/tonk/src/: Logger.h  PacketCompression.h  TimeSync.h  TonkCppSDK.cpp  TonkineseBandwidth.h  TonkineseConnection.cpp  TonkineseInterfaces.h  TonkineseOutgoing.h  TonkineseProtocol.cpp  TonkineseSession.cpp  TonkineseTools.cpp  TonkineseTools.h  TonkineseUDP.cpp
libraries/tonk/tests/: TonkUnitTest.cpp
libraries/tonk/tests/mau/: MauTools.h
meshoptimizer/: CMakeLists.txt
mfx_codecs/: CMakeLists.txt
mfx_codecs/include/: MfxVideoDecoder.hpp  MfxVideoEncoder.hpp
mfx_codecs/src/: MfxTools.cpp  MfxVideoDecoder.cpp
mfx_codecs/tests/: mfx_test.cpp
nfd/: CMakeLists.txt
nfd/src/: nfd_common.c
nuklear/: CMakeLists.txt
nvcuvid/: CMakeLists.txt  Readme.md
nvcuvid/include/: NvEncoderCuda.h
nvcuvid/src/: NvEncoderCuda.cpp
nvcuvid_codecs/: CMakeLists.txt
nvcuvid_codecs/include/: Cuda.hpp  NvJpegDecoder.hpp
nvcuvid_codecs/src/: Cuda.cpp  NvJpegDecoder.cpp  NvVideoCodec.cpp
rendezvous_server/app/: Main.cpp
rendezvous_server/include/: BitField.hpp  RendezvousServer.hpp
rendezvous_server/src/: RendezvousServer.cpp
sodium/: LICENSE
sodium/include/: crypto_spake.h
sodium/src/: crypto_spake.c  pushpop.h
tbb/: CMakeLists.txt
tonk/: CMakeLists.txt
tonk/src/: Logger.cpp  TonkineseBandwidth.cpp  TonkineseConnection.h  TonkineseEncryption.cpp  TonkineseEncryption.h  TonkineseIncoming.cpp  TonkineseIncoming.h  TonkineseOutgoing.cpp  TonkineseProtocol.h  tonk.cpp
tonk/tests/: BandwidthControlTest.cpp  BandwidthControlTest.h  TonkTestTools.cpp  TonkTestTools.h
vectormath/: CMakeLists.txt
viewer/: CMakeLists.txt
viewer/src/: GltfWriter.cpp  GltfWriter.hpp  ViewerWindow.cpp  ViewerWindow.hpp  viewer_main.cpp
xrcap_csharp/: Program.cs  XrcapSDK.cs  XrcapUnityPlugin.csproj  XrcapUnityPlugin.sln
zdepth/include/: zdepth_lossless.hpp
zdepth/tests/: zdepth_tests.cpp
